fix recomends and published_at
