# resources/model_article_with_recommends.go
@@ -1,0 +1,186 @@
+/*
+REST API
+
+REST API
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ArticleWithRecommends type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ArticleWithRecommends{}
+
+// ArticleWithRecommends struct for ArticleWithRecommends
+type ArticleWithRecommends struct {
+	Data ArticleData `json:"data"`
+	Included ArticleWithRecommendsInclude `json:"included"`
+}
+
+type _ArticleWithRecommends ArticleWithRecommends
+
+// NewArticleWithRecommends instantiates a new ArticleWithRecommends object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewArticleWithRecommends(data ArticleData, included ArticleWithRecommendsInclude) *ArticleWithRecommends {
+	this := ArticleWithRecommends{}
+	this.Data = data
+	this.Included = included
+	return &this
+}
+
+// NewArticleWithRecommendsWithDefaults instantiates a new ArticleWithRecommends object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewArticleWithRecommendsWithDefaults() *ArticleWithRecommends {
+	this := ArticleWithRecommends{}
+	return &this
+}
+
+// GetData returns the Data field value
+func (o *ArticleWithRecommends) GetData() ArticleData {
+	if o == nil {
+		var ret ArticleData
+		return ret
+	}
+
+	return o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value
+// and a boolean to check if the value has been set.
+func (o *ArticleWithRecommends) GetDataOk() (*ArticleData, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Data, true
+}
+
+// SetData sets field value
+func (o *ArticleWithRecommends) SetData(v ArticleData) {
+	o.Data = v
+}
+
+// GetIncluded returns the Included field value
+func (o *ArticleWithRecommends) GetIncluded() ArticleWithRecommendsInclude {
+	if o == nil {
+		var ret ArticleWithRecommendsInclude
+		return ret
+	}
+
+	return o.Included
+}
+
+// GetIncludedOk returns a tuple with the Included field value
+// and a boolean to check if the value has been set.
+func (o *ArticleWithRecommends) GetIncludedOk() (*ArticleWithRecommendsInclude, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Included, true
+}
+
+// SetIncluded sets field value
+func (o *ArticleWithRecommends) SetIncluded(v ArticleWithRecommendsInclude) {
+	o.Included = v
+}
+
+func (o ArticleWithRecommends) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ArticleWithRecommends) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["data"] = o.Data
+	toSerialize["included"] = o.Included
+	return toSerialize, nil
+}
+
+func (o *ArticleWithRecommends) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"data",
+		"included",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varArticleWithRecommends := _ArticleWithRecommends{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varArticleWithRecommends)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ArticleWithRecommends(varArticleWithRecommends)
+
+	return err
+}
+
+type NullableArticleWithRecommends struct {
+	value *ArticleWithRecommends
+	isSet bool
+}
+
+func (v NullableArticleWithRecommends) Get() *ArticleWithRecommends {
+	return v.value
+}
+
+func (v *NullableArticleWithRecommends) Set(val *ArticleWithRecommends) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableArticleWithRecommends) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableArticleWithRecommends) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableArticleWithRecommends(val *ArticleWithRecommends) *NullableArticleWithRecommends {
+	return &NullableArticleWithRecommends{value: val, isSet: true}
+}
+
+func (v NullableArticleWithRecommends) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableArticleWithRecommends) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
